--- a/ui/index.html
+++ b/ui/index.html
@@ -1,30 +1,79 @@
 <!DOCTYPE html
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>cms</title>
-        <link rel="stylesheet" href="lib/pen/pen.css" />
-    </head>
-    <body>
-        <div id="editor"></div>
+	<head>
+		<meta charset="UTF-8">
+		<title>cms</title>
 
-        <script src="https://unpkg.com/js-yaml@3.10.0/dist/js-yaml.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-        <script src="js/yamlFront.js"></script>
-        <script src="lib/pen/pen.js"></script>
-        <script>
-            axios.get("/sites/test/files/3/test.md", { responseType: 'text' }).then(data=>renderHTML(data.data))
+		<style type="text/css">
+*{padding:0;margin:0;}
+html{border-top:10px #1abf89 solid;}
+body{width:800px;margin:0 auto;padding:5% 20px 20px;font-family:Palatino, Optima, Georgia, serif;}
+@media all and (max-width:1024px){ body, pre a{width:60%;} }
+small{color:#999;}
+pre{white-space:pre-wrap;}
 
-            function renderHTML(data) {
-                fmmd = yamlFront.loadFront(data)
-                var html = marked(fmmd.__content)
-                document.getElementById("editor").innerHTML = html
-                var y = jsyaml.dump(fmmd)
-                console.log(y)
-            }
+#toolbar{margin-bottom:1em;position:fixed;left:20px;margin-top:5px;}
+#toolbar [class^="icon-"]:before, #toolbar [class*=" icon-"]:before{font-family:'pen'}
+#mode{color:#1abf89;;cursor:pointer;}
+#mode.disabled{color:#666;}
+#mode:before{content: '\e813';}
+#hinted{color:#1abf89;cursor:pointer;}
+#hinted.disabled{color:#666;}
+#hinted:before{content: '\e816';}
+#tomd{color:#fff;border-radius:2px;line-height:1;padding:1px 3px 0; font-size:0.8em;background:#000;cursor:pointer;}
 
-            var editor = new Pen(document.getElementById('editor'));
-        </script>
-    </body>
+#fork{position:fixed;right:0;top:0;}
+
+/*
+   When the webpage is printed
+   this media query hides extra elements,
+   and makes the text content fit the page.
+ */
+@media print {
+	#fork, #toolbar {
+		display: none;
+	}
+	body {
+		width: 94%;
+		padding-top: 1em;
+		font-size: 12px;
+	}
+	html {
+		border-top: 0;
+	}
+}
+		</style>
+
+
+		<link rel="stylesheet" href="lib/pen/pen.css" />
+	</head>
+	<body>
+		<div id="editor"></div>
+
+		<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+		<script src="lib/pen/pen.js"></script>
+		<script>
+			axios.get("/sites/test/files/3/test.md", {
+				responseType: 'text',
+				params: {
+					o: 'md'
+				}
+			}).then(data=>renderHTML(data.data))
+
+			function renderHTML(data) {
+				document.getElementById("editor").innerHTML = data
+			}
+
+
+			var options = {
+				editor: document.querySelector('#editor'),
+				debug: false,
+				list: [
+					'h1', 'h2', 'h3', 'p', 'code', 'indent', 'outdent', 'bold', 'italic', 'underline', 'createlink'
+				]
+			};
+			var editor = new Pen(options);
+		</script>
+	</body>
 </html>
