--- a/ui/index.html
+++ b/ui/index.html
@@ -1,46 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Mycro</title>
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-    </head>
-    <body>
-        <div class="grid">
-            <div class="toolbar">
-                <div class="logo">μ</div>
-                <div class="menu">
-                    <select id="projects"></select>
-                </div>
-            </div>
-            <div class="main">
-                <div class="fileselector" id="files"></div>
-                <div class="workarea" id="workarea"></div>
-            </div>
-        </div>
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-        <script type="module" src="assets/js/main.js"></script>
-    </body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Mycro</title>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="assets/css/main.css">
+	</head>
+	<body>
+		<div class="grid">
+			<div class="toolbar">
+				<div class="logo">μ</div>
+				<div class="menu">
+					<select id="projects"></select>
+				</div>
+			</div>
+			<div class="main">
+				<div class="fileselector" id="files"></div>
+				<div class="workarea" id="workarea"></div>
+			</div>
+		</div>
+		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+		<script type="module">
+			import * as app from './assets/js/app.js';
+
+			var config = {
+				projectsElement: "#projects",
+				filesElement: "#files",
+				workareaElement: "#workarea",
+			};
+
+			var a = new app.App(config);
+			a.run();
+		</script>
+	</body>
 </html>
 
 
 <script type="text/html" id="file_tmpl">
-    <div class="file" data-path="<%=path%>"><%=name%></div>
+	<div class="file" data-path="<%=path%>"><%=name%></div>
 </script>
 
 <script type="text/html" id="folder_tmpl">
-    <input class="hidden checkbox" type="checkbox" id="<%=id%>"></input>
-    <label class="folder" data-path="<%=path%>" for="<%=id%>"><%=name%></label>
-    <div class="foldercontent"></div>
+	<input class="hidden checkbox" type="checkbox" id="<%=id%>"></input>
+	<label class="folder" data-path="<%=path%>" for="<%=id%>"><%=name%></label>
+	<div class="foldercontent"></div>
 </script>
 
 <script type="text/html" id="editor_tmpl">
-    <textarea class="raweditor" id="<%=id%>" data-file="<%=path%>" data-project="<%=project%>"><%=content%></textarea>
+	<textarea class="raweditor" id="<%=id%>" data-file="<%=path%>" data-project="<%=project%>"><%=content%></textarea>
 </script>
 
 <script type="text/html" id="controls_tmpl">
-    <div class="save">
-        <button data-file="<%=path%>" data-project="<%=project%>" data-target="<%=id%>">save</button>
-    </div>
+	<div class="save">
+		<button data-file="<%=path%>" data-project="<%=project%>" data-target="<%=id%>">save</button>
+	</div>
 </script>
